services.yaml
apiVersion: v1
kind: Service
metadata:
  name: lifecopilot-frontend-service
spec:
  selector:
    app: lifecopilot-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
